# pdoc_ai

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: docs.yml  test.yml
scripts/: code_coverage.py  document.py
scripts/win/: docs.bat
src/pdoc_ai/: __init__.py  cli_app.py  ingester.py  llm.py  main.py  paths.py  readme.py
src/pdoc_ai/utils/: decorators.py
src/template_python/: __init__.py  cli_app.py  llm.py
src/template_python/cryptography/: text.py
src/template_python/notify/: Gotify.py
src/template_python/utils/: config_parser.py  credentials.py
src/tests/: test_cryptography.py
src/tests/utils/: test_config_parser.py  test_logging.py
